<resources>
    <string name="app_name">Electronic Remote</string>
    <string name="text_light_off">OFF</string>
    <string name="button_fan_auto">Fan Auto</string>
    <string name="button_ip">Set IP Address</string>
    <string name="button_credential">Change Credential</string>
    <string name="switch_light">Light</string>
    <string name="switch_fan">Fan</string>
    <string name="button_ip_save">Save</string>
    <string name="title_activity_change_cred">changeCredActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_username">Username</string>
    <string name="password_password">Password</string>
    <string name="button_cred_save">Save</string>
    <string name="act_title_set_ip">Set IP</string>
    <string name="act_title_change_cred">Change Credential</string>
    <string name="act_title_fan_auto">Fan Auto</string>
    <string name="button_set_fan_auto_on">Set Auto On Time</string>
    <string name="button_set_fan_auto_off">Set Auto Off Time</string>
    <string name="text_auto_on">Auto On:</string>
    <string name="text_auto_off">Auto Off:</string>
    <string name="button_set_auto_time">Set</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="password_switchpass">Password</string>
    <string name="switch_ext">Ext</string>
</resources>