<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FanAutoActivity">

    <Switch
        android:id="@+id/switch_fan_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:onClick="onClick"
        android:showText="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_set_fan_auto_on"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:onClick="onClick"
        android:text="@string/button_set_fan_auto_on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_fan_auto" />

    <Button
        android:id="@+id/button_set_fan_auto_off"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:onClick="onClick"
        android:text="@string/button_set_fan_auto_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_set_fan_auto_on" />

    <TextView
        android:id="@+id/text_auto_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="10dp"
        android:text="@string/text_auto_on"
        app:layout_constraintBottom_toTopOf="@+id/text_auto_off"
        app:layout_constraintEnd_toStartOf="@+id/text_auto_on_time"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_auto_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="50dp"
        android:text="@string/text_auto_off"
        app:layout_constraintBottom_toTopOf="@+id/switch_fan_auto"
        app:layout_constraintEnd_toStartOf="@+id/text_auto_off_time"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_auto_off_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:text="TextView"
        android:textAlignment="viewEnd"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_auto_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_auto_off" />

    <TextView
        android:id="@+id/text_auto_on_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:text="TextView"
        android:textAlignment="viewEnd"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_auto_on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_auto_on" />

</androidx.constraintlayout.widget.ConstraintLayout>